objects/blng__InvoicePlan__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether or not this Invoice Plan Template is active.</description>
        <inlineHelpText>If checked, this Invoice Plan Template is active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__BillingScheduleCreation__c</fullName>
        <label>Billing Schedule Creation</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InvoicePlanCreation</valueSetName>
        </valueSet>
    </fields>
    <label>Invoice Plan</label>
    <nameField>
        <label>Invoice Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>